--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "engines":{
+  "node": "v20.18.0"
+  },
+
   "name": "majorproject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
